# coreutils-am-ng

./: .gitignore  Makefile.am  bootstrap.conf  configure.ac
man/: Makefile.am
src/: Makefile.am
tests/: check.mk
